kubernetes/apps/arangodb/cluster/app/service.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
---
apiVersion: v1
kind: Service
metadata:
  name: &app arango
  namespace: arangodb
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/hostname: arangodb.${SECRET_DOMAIN}
    lbipam.cilium.io/ips: 192.168.1.244
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: server
      port: 8529
      protocol: TCP
      targetPort: 8529
  selector:
    app: arangodb
    arango_deployment: arangodb-cluster
    role: coordinator
