kubernetes/apps/arangodb/cluster/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arangodb
  namespace: arangodb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: external.enchantednatures.com
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    kubernetes.io/tls-acme: "true"
    external-dns/is-public: "true"

spec:
  ingressClassName: external
  tls:
    - hosts:
        - arango.enchantednatures.com
      secretName: arangodb
  rules:
    - host: arango.enchantednatures.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arangodb-cluster
                port:
                  number: 8529
