kubernetes/apps/arangodb/cluster/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: arangodb
  namespace: arangodb
spec:
  hosts:
    - arango.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: arangodb-cluster.arangodb.svc.cluster.local
            port:
              number: 8529
      headers:
        request:
          set:
            X-Forwarded-Proto: https
